# terraria-autoswing

./: Cargo.toml  README.md
src/: main.rs
