[package]
name = "terraria-autoswing"
version = "0.1.0"
authors = ["Tomer Abramovich <untradeta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["tlhelp32", "handleapi", "psapi", "processthreadsapi", "errhandlingapi", "memoryapi"] }